--- a/Development/SafetyNet/SafetyNet/packages.config
+++ b/Development/SafetyNet/SafetyNet/packages.config
@@ -36,8 +36,14 @@
   <package id="Microsoft.Owin.Security.Twitter" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.6.2" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="6.0.3" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="6.0.5" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.2.0" targetFramework="net45" />
+  <package id="RestSharp" version="104.4.0" targetFramework="net45" />
+  <package id="Sendgrid" version="4.0.0" targetFramework="net45" />
+  <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net45" />
+  <package id="Twilio" version="3.6.17" targetFramework="net45" />
+  <package id="Twilio.Mvc" version="3.1.12" targetFramework="net45" />
+  <package id="Twilio.TwiML" version="3.3.3" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
 </packages>
