--- a/Development/SafetyNet/SafetyNet/packages.config
+++ b/Development/SafetyNet/SafetyNet/packages.config
@@ -5,6 +5,7 @@
   <package id="EntityFramework" version="6.1.1" targetFramework="net45" />
   <package id="jQuery" version="1.10.2" targetFramework="net45" />
   <package id="jQuery.Validation" version="1.11.1" targetFramework="net45" />
+  <package id="JWT" version="1.3.2" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights" version="0.10.0-build17704" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.JavaScript" version="0.10.0-build17683" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.RuntimeTelemetry" version="0.10.0-build17704" targetFramework="net45" />
@@ -43,6 +44,7 @@
   <package id="Sendgrid" version="4.0.0" targetFramework="net45" />
   <package id="SendGrid.SmtpApi" version="1.1.3" targetFramework="net45" />
   <package id="Twilio" version="3.6.17" targetFramework="net45" />
+  <package id="Twilio.Client" version="3.4.4" targetFramework="net45" />
   <package id="Twilio.Mvc" version="3.1.12" targetFramework="net45" />
   <package id="Twilio.TwiML" version="3.3.3" targetFramework="net45" />
   <package id="WebGrease" version="1.5.2" targetFramework="net45" />
