Added Mobile controller and views.

--- a/Development/SafetyNet/SafetyNet/SafetyNet.csproj
+++ b/Development/SafetyNet/SafetyNet/SafetyNet.csproj
@@ -220,6 +220,7 @@
     <Compile Include="Controllers\EmailController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MobileController.cs" />
     <Compile Include="Controllers\PhoneController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
@@ -299,6 +300,11 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Mobile\AlertView.cshtml" />
+    <Content Include="Views\Mobile\CalmView.cshtml" />
+    <Content Include="Views\Mobile\MapView.cshtml" />
+    <Content Include="Views\Mobile\UpdateView.cshtml" />
+    <Content Include="Views\Mobile\ConfirmView.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
