--- a/Development/SafetyNet/SafetyNet/SafetyNet.csproj
+++ b/Development/SafetyNet/SafetyNet/SafetyNet.csproj
@@ -216,10 +216,10 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
-    <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\EmailController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
-    <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\HttpPost.cs" />
+    <Compile Include="Controllers\MessageController.cs" />
     <Compile Include="Controllers\MobileController.cs" />
     <Compile Include="Controllers\PhoneController.cs" />
     <Compile Include="Global.asax.cs">
@@ -244,6 +244,17 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Images\Checkmark-Icon-Large.png" />
+    <Content Include="Images\Flashlight-Icon-Small.png" />
+    <Content Include="Images\Food-Icon-Small.png" />
+    <Content Include="Images\Keep-Calm-Big.png" />
+    <Content Include="Images\Keep-Calm-Icon-Sans-Happy-Face.png" />
+    <Content Include="Images\Medical-Icon-Small.png" />
+    <Content Include="Images\Send-Message-Icon-Small.png" />
+    <Content Include="Images\Shelter-Icon-Small.png" />
+    <Content Include="Images\Siren-Icon-Small.png" />
+    <Content Include="Images\Warning-Sign-Big.png" />
+    <Content Include="Images\Warning-Sign-Small.png" />
     <Content Include="Scripts\ai.js" />
     <Content Include="Scripts\ai.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -261,6 +272,7 @@
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\script.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
