--- a/Development/SafetyNet/SafetyNet/SafetyNet.csproj
+++ b/Development/SafetyNet/SafetyNet/SafetyNet.csproj
@@ -245,14 +245,21 @@
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
     <Content Include="Images\Checkmark-Icon-Large.png" />
+    <Content Include="Images\Confirm.png" />
     <Content Include="Images\Flashlight-Icon-Small.png" />
     <Content Include="Images\Food-Icon-Small.png" />
     <Content Include="Images\Keep-Calm-Big.png" />
     <Content Include="Images\Keep-Calm-Icon-Sans-Happy-Face.png" />
+    <Content Include="Images\Map bottom.png" />
+    <Content Include="Images\map top.png" />
+    <Content Include="Images\Map.png" />
     <Content Include="Images\Medical-Icon-Small.png" />
     <Content Include="Images\Send-Message-Icon-Small.png" />
     <Content Include="Images\Shelter-Icon-Small.png" />
     <Content Include="Images\Siren-Icon-Small.png" />
+    <Content Include="Images\submit bottom.png" />
+    <Content Include="Images\update bottom.png" />
+    <Content Include="Images\Update.png" />
     <Content Include="Images\Warning-Sign-Big.png" />
     <Content Include="Images\Warning-Sign-Small.png" />
     <Content Include="Scripts\ai.js" />
